@@ -1,13 +1,16 @@
-from eventlet import patcher
-from eventlet.green import select
-from eventlet.green import socket
-from eventlet.green import time
+import sys
 
-patcher.inject(
-    "asyncore",
-    globals(),
-    ('select', select),
-    ('socket', socket),
-    ('time', time))
+if sys.version_info < (3, 12):
+    from eventlet import patcher
+    from eventlet.green import select
+    from eventlet.green import socket
+    from eventlet.green import time
 
-del patcher
+    patcher.inject(
+        "asyncore",
+        globals(),
+        ('select', select),
+        ('socket', socket),
+        ('time', time))
+
+    del patcher
